foolish/foolish-core/src/snapshots/foolish_core__approval_tests__foop9_unary_operator.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {a=-42;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Operator(-) [EMBRYONIC]
    Int(42) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  a = 
  Int(-42) [CONSTANT]
