foolish/foolish-core/src/snapshots/foolish_core__approval_tests__forward_reference_basic.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {y = x; x = 42;}
[0] PARSED:
Brane [EMBRYONIC]
  y = 
  Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
  x = 
  Int(42) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  y = 
  Int(42) [INDEPENDENT]
  x = 
  Int(42) [INDEPENDENT]
