foolish/foolish-core/src/snapshots/foolish_core__approval_tests__forward_reference_in_nested_brane.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 OY4dHDsVthXYXfKjSfr1+JFHLAnPciAX25SAeuWJT9xoN7lHyz9sn14cKK7eTUYyeF503tyqWs2tXQ/Heu/bBw==
INPUT: {outer = {val = x}; x = 100;}
[0] PARSED:
Brane [EMBRYONIC]
  outer = 
  Brane [EMBRYONIC]
    val = 
    Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
  x = 
  Int(100) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  outer = 
  Brane [CONSTANT]
    val = 
    Int(100) [INDEPENDENT]
  x = 
  Int(100) [INDEPENDENT]
