foolish/foolish-core/src/snapshots/foolish_core__approval_tests__head_tail_basic.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {x = {10; 20; 30}^; y = {10; 20; 30}$;}
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  HeadTail(HEAD, ANCHORED) [EMBRYONIC]
  y = 
  HeadTail(TAIL, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  x = 
  Int(10) [INDEPENDENT]
  y = 
  Int(30) [INDEPENDENT]
