foolish/foolish-core/src/snapshots/foolish_core__approval_tests__head_tail_chained_on_nested.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 j7xq4r9WbalS4pPPdhq+YKTvdlz/Kb3Ndc81F5kxgYxGYcyt3fMAFhKJGGoCnk16qFgLaZ7yprwOgDJunKZqAw==
INPUT: {b = {{{1; 2}; 3}; 4}; h = b^; hh = b^^;}
[0] PARSED:
Brane [EMBRYONIC]
  b = 
  Brane [EMBRYONIC]
    Brane [EMBRYONIC]
      Brane [EMBRYONIC]
        Int(1) [INDEPENDENT]
        Int(2) [INDEPENDENT]
      Int(3) [INDEPENDENT]
    Int(4) [INDEPENDENT]
  h = 
  HeadTail(HEAD, ANCHORED) [EMBRYONIC]
  hh = 
  HeadTail(HEAD, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  b = 
  Brane [CONSTANT]
    Brane [CONSTANT]
      Brane [CONSTANT]
        Int(1) [INDEPENDENT]
        Int(2) [INDEPENDENT]
      Int(3) [INDEPENDENT]
    Int(4) [INDEPENDENT]
  h = 
  Brane [CONSTANT]
    Brane [CONSTANT]
      Int(1) [INDEPENDENT]
      Int(2) [INDEPENDENT]
    Int(3) [INDEPENDENT]
  hh = 
  Brane [CONSTANT]
    Int(1) [INDEPENDENT]
    Int(2) [INDEPENDENT]
