foolish/foolish-core/src/snapshots/foolish_core__approval_tests__head_tail_empty_brane.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 Avsb7nclIVVilSB7d706yc/tDJZ051kUv9mR3CByZnIpqf3AOYlahVeyETlSxxQdBqEjoO01R7PYPk5JdpdvDQ==
INPUT: {e = {}^; f = {}$;}
[0] PARSED:
Brane [EMBRYONIC]
  e = 
  HeadTail(HEAD, ANCHORED) [EMBRYONIC]
  f = 
  HeadTail(TAIL, ANCHORED) [EMBRYONIC]
RESULT:
Brane [NK]
  e = 
  HeadTail(HEAD, ANCHORED) [NK]
  f = 
  HeadTail(TAIL, ANCHORED) [NK]
