foolish/foolish-core/src/snapshots/foolish_core__approval_tests__head_tail_nested_brane.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 /IXwjW+DSjYmwlE94itU8G++ODmQHnKuqRqfVwWPeLQPWksmLtcdhaENo1JexAPGsGTDE4M93izsl4d5lpCjCQ==
INPUT: {b = {{1; 2}; {3; 4}}$; c = b^; d = b$;}
[0] PARSED:
Brane [EMBRYONIC]
  b = 
  HeadTail(TAIL, ANCHORED) [EMBRYONIC]
  c = 
  HeadTail(HEAD, ANCHORED) [EMBRYONIC]
  d = 
  HeadTail(TAIL, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  b = 
  Brane [CONSTANT]
    Int(3) [INDEPENDENT]
    Int(4) [INDEPENDENT]
  c = 
  Int(3) [INDEPENDENT]
  d = 
  Int(4) [INDEPENDENT]
