foolish/foolish-core/src/snapshots/foolish_core__approval_tests__head_tail_on_named_brane.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 qVfVlVVnyO3tEeSsR8TOUWZRNEvNIIYbziNSVH8/qZWtnyDW5dPQj5EYPugxLRde9lGUgqfD2qxOAPFLz6jjDw==
INPUT: {brane = {1; 2; 3}; val = brane^; last = brane$;}
[0] PARSED:
Brane [EMBRYONIC]
  brane = 
  Brane [EMBRYONIC]
    Int(1) [INDEPENDENT]
    Int(2) [INDEPENDENT]
    Int(3) [INDEPENDENT]
  val = 
  HeadTail(HEAD, ANCHORED) [EMBRYONIC]
  last = 
  HeadTail(TAIL, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  brane = 
  Brane [CONSTANT]
    Int(1) [INDEPENDENT]
    Int(2) [INDEPENDENT]
    Int(3) [INDEPENDENT]
  val = 
  Int(1) [INDEPENDENT]
  last = 
  Int(3) [INDEPENDENT]
