foolish/foolish-core/src/snapshots/foolish_core__approval_tests__head_tail_on_search_result.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 Kwd+4e7Ij4lfK7rfXgwRyGqTzPzZjKGUuJo94H9YwdcXrXMLQFJoLvlV8DlsdyDV1hR+vjEcI+LAXVDik8i9BA==
INPUT: {b = {x = {1; 2; 3}}; h = b.x^; t = b.x$;}
[0] PARSED:
Brane [EMBRYONIC]
  b = 
  Brane [EMBRYONIC]
    x = 
    Brane [EMBRYONIC]
      Int(1) [INDEPENDENT]
      Int(2) [INDEPENDENT]
      Int(3) [INDEPENDENT]
  h = 
  HeadTail(HEAD, ANCHORED) [EMBRYONIC]
  t = 
  HeadTail(TAIL, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  b = 
  Brane [CONSTANT]
    x = 
    Brane [CONSTANT]
      Int(1) [INDEPENDENT]
      Int(2) [INDEPENDENT]
      Int(3) [INDEPENDENT]
  h = 
  Int(1) [INDEPENDENT]
  t = 
  Int(3) [INDEPENDENT]
