foolish/foolish-core/src/snapshots/foolish_core__approval_tests__head_tail_on_two_element_brane.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {b = {10; 20}; h = b^; t = b$;}
[0] PARSED:
Brane [EMBRYONIC]
  b = 
  Brane [EMBRYONIC]
    Int(10) [INDEPENDENT]
    Int(20) [INDEPENDENT]
  h = 
  HeadTail(HEAD, ANCHORED) [EMBRYONIC]
  t = 
  HeadTail(TAIL, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  b = 
  Brane [CONSTANT]
    Int(10) [INDEPENDENT]
    Int(20) [INDEPENDENT]
  h = 
  Int(10) [INDEPENDENT]
  t = 
  Int(20) [INDEPENDENT]
