foolish/foolish-core/src/snapshots/foolish_core__approval_tests__identifierInExpressionIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Int(10) [INDEPENDENT]
  y = 
  Int(20) [INDEPENDENT]
  Operator(+) [EMBRYONIC]
    Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
    Search(pattern='^y$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  x = 
  Int(10) [INDEPENDENT]
  y = 
  Int(20) [INDEPENDENT]
  Int(30) [CONSTANT]
